// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupsDataActions.validateBookSelections No selection changes 1`] = `Array []`;

exports[`GroupsDataActions.validateBookSelections all selections edited 1`] = `
Array [
  Object {
    "contextId": Object {
      "groupId": "apostle",
      "occurrence": 1,
      "quote": "ἀπόστολος",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "strong": Array [
        "G06520",
      ],
      "tool": "translationWords",
    },
    "nothingToSelect": false,
    "selections": Array [],
    "type": "TOGGLE_SELECTIONS_IN_GROUPDATA",
  },
  Object {
    "boolean": true,
    "contextId": Object {
      "groupId": "apostle",
      "occurrence": 1,
      "quote": "ἀπόστολος",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "strong": Array [
        "G06520",
      ],
      "tool": "translationWords",
    },
    "type": "SET_INVALIDATION_IN_GROUPDATA",
  },
  Object {
    "contextId": Object {
      "groupId": "god",
      "occurrence": 1,
      "quote": "Θεοῦ",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "strong": Array [
        "G23160",
      ],
      "tool": "translationWords",
    },
    "nothingToSelect": false,
    "selections": Array [],
    "type": "TOGGLE_SELECTIONS_IN_GROUPDATA",
  },
  Object {
    "boolean": true,
    "contextId": Object {
      "groupId": "god",
      "occurrence": 1,
      "quote": "Θεοῦ",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "strong": Array [
        "G23160",
      ],
      "tool": "translationWords",
    },
    "type": "SET_INVALIDATION_IN_GROUPDATA",
  },
  Object {
    "cancelText": null,
    "confirmText": null,
    "id": "selections_invalidated",
    "ignoreText": null,
    "message": "tools.selections_invalidated",
    "onCancel": null,
    "onConfirm": null,
    "type": "OPEN_ALERT",
  },
]
`;

exports[`GroupsDataActions.validateBookSelections apostle selection edited 1`] = `
Array [
  Object {
    "contextId": Object {
      "groupId": "apostle",
      "occurrence": 1,
      "quote": "ἀπόστολος",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "strong": Array [
        "G06520",
      ],
      "tool": "translationWords",
    },
    "nothingToSelect": false,
    "selections": Array [],
    "type": "TOGGLE_SELECTIONS_IN_GROUPDATA",
  },
  Object {
    "boolean": true,
    "contextId": Object {
      "groupId": "apostle",
      "occurrence": 1,
      "quote": "ἀπόστολος",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "strong": Array [
        "G06520",
      ],
      "tool": "translationWords",
    },
    "type": "SET_INVALIDATION_IN_GROUPDATA",
  },
  Object {
    "cancelText": null,
    "confirmText": null,
    "id": "selections_invalidated",
    "ignoreText": null,
    "message": "tools.selections_invalidated",
    "onCancel": null,
    "onConfirm": null,
    "type": "OPEN_ALERT",
  },
]
`;

exports[`GroupsDataActions.verifyGroupDataMatchesWithFs should succeed with external verse edits 1`] = `
Array [
  Object {
    "alertMessage": "loading_verse_edits",
    "loading": true,
    "type": "OPEN_ALERT_DIALOG",
  },
  Object {
    "contextId": Object {
      "groupId": "christ",
      "occurrence": 1,
      "quote": "Χριστοῦ",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 4,
      },
      "strong": Array [
        "G55470",
      ],
      "tool": "translationWords",
    },
    "type": "TOGGLE_VERSE_EDITS_IN_GROUPDATA",
  },
  Object {
    "contextId": Object {
      "groupId": "faith",
      "occurrence": 1,
      "quote": "πίστιν",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 4,
      },
      "strong": Array [
        "G41020",
      ],
      "tool": "translationWords",
    },
    "type": "TOGGLE_VERSE_EDITS_IN_GROUPDATA",
  },
  Object {
    "contextId": Object {
      "groupId": "god",
      "occurrence": 1,
      "quote": "Θεοῦ",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 4,
      },
      "strong": Array [
        "G23160",
      ],
      "tool": "translationWords",
    },
    "type": "TOGGLE_VERSE_EDITS_IN_GROUPDATA",
  },
  Object {
    "contextId": Object {
      "groupId": "godthefather",
      "occurrence": 1,
      "quote": "Θεοῦ Πατρὸς",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 4,
      },
      "strong": Array [
        "G23160",
        "G39620",
      ],
      "tool": "translationWords",
    },
    "type": "TOGGLE_VERSE_EDITS_IN_GROUPDATA",
  },
  Object {
    "contextId": Object {
      "groupId": "grace",
      "occurrence": 1,
      "quote": "χάρις",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 4,
      },
      "strong": Array [
        "G54850",
      ],
      "tool": "translationWords",
    },
    "type": "TOGGLE_VERSE_EDITS_IN_GROUPDATA",
  },
  Object {
    "contextId": Object {
      "groupId": "jesus",
      "occurrence": 1,
      "quote": "Χριστοῦ Ἰησοῦ",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 4,
      },
      "strong": Array [
        "G55470",
        "G24240",
      ],
      "tool": "translationWords",
    },
    "type": "TOGGLE_VERSE_EDITS_IN_GROUPDATA",
  },
  Object {
    "contextId": Object {
      "groupId": "savior",
      "occurrence": 1,
      "quote": "Σωτῆρος",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 4,
      },
      "strong": Array [
        "G49900",
      ],
      "tool": "translationWords",
    },
    "type": "TOGGLE_VERSE_EDITS_IN_GROUPDATA",
  },
  Object {
    "contextId": Object {
      "groupId": "son",
      "occurrence": 1,
      "quote": "τέκνῳ",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 4,
      },
      "strong": Array [
        "G50430",
      ],
      "tool": "translationWords",
    },
    "type": "TOGGLE_VERSE_EDITS_IN_GROUPDATA",
  },
  Object {
    "contextId": Object {
      "groupId": "true",
      "occurrence": 1,
      "quote": "γνησίῳ",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 4,
      },
      "strong": Array [
        "G11030",
      ],
      "tool": "translationWords",
    },
    "type": "TOGGLE_VERSE_EDITS_IN_GROUPDATA",
  },
  Object {
    "type": "CLOSE_ALERT_DIALOG",
  },
  Object {
    "boolean": true,
    "contextId": Object {
      "groupId": "apostle",
      "occurrence": 1,
      "quote": "ἀπόστολος",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "strong": Array [
        "G06520",
      ],
      "tool": "translationWords",
    },
    "type": "SET_INVALIDATION_IN_GROUPDATA",
  },
  Object {
    "boolean": true,
    "contextId": Object {
      "groupId": "god",
      "occurrence": 1,
      "quote": "Θεοῦ",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "strong": Array [
        "G23160",
      ],
      "tool": "translationWords",
    },
    "type": "SET_INVALIDATION_IN_GROUPDATA",
  },
  Object {
    "contextId": Object {
      "groupId": "apostle",
      "occurrence": 1,
      "quote": "ἀπόστολος",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "strong": Array [
        "G06520",
      ],
      "tool": "translationWords",
    },
    "selections": Array [],
    "type": "TOGGLE_SELECTIONS_IN_GROUPDATA",
  },
  Object {
    "contextId": Object {
      "groupId": "god",
      "occurrence": 1,
      "quote": "Θεοῦ",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "strong": Array [
        "G23160",
      ],
      "tool": "translationWords",
    },
    "selections": Array [],
    "type": "TOGGLE_SELECTIONS_IN_GROUPDATA",
  },
]
`;

exports[`GroupsDataActions.verifyGroupDataMatchesWithFs should succeed with multiple external verse edits 1`] = `
Array [
  Object {
    "alertMessage": "loading_verse_edits",
    "loading": true,
    "type": "OPEN_ALERT_DIALOG",
  },
  Object {
    "contextId": Object {
      "groupId": "christ",
      "occurrence": 1,
      "quote": "Χριστοῦ",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 4,
      },
      "strong": Array [
        "G55470",
      ],
      "tool": "translationWords",
    },
    "type": "TOGGLE_VERSE_EDITS_IN_GROUPDATA",
  },
  Object {
    "contextId": Object {
      "groupId": "faith",
      "occurrence": 1,
      "quote": "πίστιν",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 4,
      },
      "strong": Array [
        "G41020",
      ],
      "tool": "translationWords",
    },
    "type": "TOGGLE_VERSE_EDITS_IN_GROUPDATA",
  },
  Object {
    "groupId": "god",
    "references": Array [
      Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 4,
      },
      Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 7,
      },
    ],
    "type": "TOGGLE_MULTIPLE_VERSE_EDITS_IN_GROUPDATA",
  },
  Object {
    "contextId": Object {
      "groupId": "godthefather",
      "occurrence": 1,
      "quote": "Θεοῦ Πατρὸς",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 4,
      },
      "strong": Array [
        "G23160",
        "G39620",
      ],
      "tool": "translationWords",
    },
    "type": "TOGGLE_VERSE_EDITS_IN_GROUPDATA",
  },
  Object {
    "contextId": Object {
      "groupId": "grace",
      "occurrence": 1,
      "quote": "χάρις",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 4,
      },
      "strong": Array [
        "G54850",
      ],
      "tool": "translationWords",
    },
    "type": "TOGGLE_VERSE_EDITS_IN_GROUPDATA",
  },
  Object {
    "contextId": Object {
      "groupId": "jesus",
      "occurrence": 1,
      "quote": "Χριστοῦ Ἰησοῦ",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 4,
      },
      "strong": Array [
        "G55470",
        "G24240",
      ],
      "tool": "translationWords",
    },
    "type": "TOGGLE_VERSE_EDITS_IN_GROUPDATA",
  },
  Object {
    "contextId": Object {
      "groupId": "savior",
      "occurrence": 1,
      "quote": "Σωτῆρος",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 4,
      },
      "strong": Array [
        "G49900",
      ],
      "tool": "translationWords",
    },
    "type": "TOGGLE_VERSE_EDITS_IN_GROUPDATA",
  },
  Object {
    "contextId": Object {
      "groupId": "son",
      "occurrence": 1,
      "quote": "τέκνῳ",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 4,
      },
      "strong": Array [
        "G50430",
      ],
      "tool": "translationWords",
    },
    "type": "TOGGLE_VERSE_EDITS_IN_GROUPDATA",
  },
  Object {
    "contextId": Object {
      "groupId": "true",
      "occurrence": 1,
      "quote": "γνησίῳ",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 4,
      },
      "strong": Array [
        "G11030",
      ],
      "tool": "translationWords",
    },
    "type": "TOGGLE_VERSE_EDITS_IN_GROUPDATA",
  },
  Object {
    "contextId": Object {
      "groupId": "blameless",
      "occurrence": 1,
      "quote": "ἀνέγκλητον",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 7,
      },
      "strong": Array [
        "G04100",
      ],
      "tool": "translationWords",
    },
    "type": "TOGGLE_VERSE_EDITS_IN_GROUPDATA",
  },
  Object {
    "type": "CLOSE_ALERT_DIALOG",
  },
  Object {
    "boolean": true,
    "contextId": Object {
      "groupId": "apostle",
      "occurrence": 1,
      "quote": "ἀπόστολος",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "strong": Array [
        "G06520",
      ],
      "tool": "translationWords",
    },
    "type": "SET_INVALIDATION_IN_GROUPDATA",
  },
  Object {
    "boolean": true,
    "contextId": Object {
      "groupId": "god",
      "occurrence": 1,
      "quote": "Θεοῦ",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "strong": Array [
        "G23160",
      ],
      "tool": "translationWords",
    },
    "type": "SET_INVALIDATION_IN_GROUPDATA",
  },
  Object {
    "contextId": Object {
      "groupId": "apostle",
      "occurrence": 1,
      "quote": "ἀπόστολος",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "strong": Array [
        "G06520",
      ],
      "tool": "translationWords",
    },
    "selections": Array [],
    "type": "TOGGLE_SELECTIONS_IN_GROUPDATA",
  },
  Object {
    "contextId": Object {
      "groupId": "god",
      "occurrence": 1,
      "quote": "Θεοῦ",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "strong": Array [
        "G23160",
      ],
      "tool": "translationWords",
    },
    "selections": Array [],
    "type": "TOGGLE_SELECTIONS_IN_GROUPDATA",
  },
]
`;

exports[`GroupsDataActions.verifyGroupDataMatchesWithFs should succeed without external verse edits 1`] = `
Array [
  Object {
    "boolean": true,
    "contextId": Object {
      "groupId": "apostle",
      "occurrence": 1,
      "quote": "ἀπόστολος",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "strong": Array [
        "G06520",
      ],
      "tool": "translationWords",
    },
    "type": "SET_INVALIDATION_IN_GROUPDATA",
  },
  Object {
    "boolean": true,
    "contextId": Object {
      "groupId": "god",
      "occurrence": 1,
      "quote": "Θεοῦ",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "strong": Array [
        "G23160",
      ],
      "tool": "translationWords",
    },
    "type": "SET_INVALIDATION_IN_GROUPDATA",
  },
  Object {
    "contextId": Object {
      "groupId": "apostle",
      "occurrence": 1,
      "quote": "ἀπόστολος",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "strong": Array [
        "G06520",
      ],
      "tool": "translationWords",
    },
    "selections": Array [],
    "type": "TOGGLE_SELECTIONS_IN_GROUPDATA",
  },
  Object {
    "contextId": Object {
      "groupId": "god",
      "occurrence": 1,
      "quote": "Θεοῦ",
      "reference": Object {
        "bookId": "tit",
        "chapter": 1,
        "verse": 1,
      },
      "strong": Array [
        "G23160",
      ],
      "tool": "translationWords",
    },
    "selections": Array [],
    "type": "TOGGLE_SELECTIONS_IN_GROUPDATA",
  },
]
`;
